# presa

./: .prettierignore  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  turbo.json
apps/app/: Cargo.toml  package.json  tauri.conf.json
apps/app-frontend/: README.md  package.json  uno.config.ts  vite.config.ts
apps/app-frontend/src/: app.html
apps/app-frontend/src/routes/: +layout.svelte
