[workspace]
resolver = "2"
members = [
    "apps/app", "packages/app-lib",
]

[workspace.package]
edition = "2024"
rust-version = "1.93.1"
repository = "https://github.com/presa-app/presa"

[workspace.dependencies]
tauri = "2.10.2"
tauri-build = "2.5.5"
tauri-plugin-opener = "2.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
